updated nav bar

--- a/index.html
+++ b/index.html
@@ -76,24 +76,30 @@
           </div>
   
   <!-- about page -->
-  
+
 <div class="container2">
-    <div class="about">
-      <header>
+    <div class ="header">
+    <header>
       <h1><a href="#header">THAD WILLIAM HOSKIN</a></h1>
     </header>
   </div>
-<div class ="navbar">
+  <div class ="navbar">
     <nav>
       <ul>
         <li>
           <a href="#about">ABOUT</a>
+        </li>
+        <li>
           <a href="#blog">BLOG</a>
+        </li>
+        <li>
           <a href="#contact">CONTACT</a>
+        </li>
           </li>
         </ul>
       </nav>
     </div>
+
     <div class="about-main-content">
         <section-1>
           <h3>ABOUT</h3>
@@ -116,7 +122,7 @@
 
           <p id="last-p-spacing">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque aperiam dicta ea. Molestiae laborum soluta et tempora voluptatum labore quam doloremque dignissimos eligendi. Optio, alias!</p>
         </section-2>
-
+    </div>
       <!-- footer  -->
 
 
@@ -137,8 +143,8 @@
 
 <!-- blog page -->
 
-<div class="container4">
-    <div class ="blog">
+<div class="container1">
+    <div class ="header">
     <header>
       <h1><a href="#header">THAD WILLIAM HOSKIN</a></h1>
     </header>
@@ -148,8 +154,13 @@
       <ul>
         <li>
           <a href="#about">ABOUT</a>
+        </li>
+        <li>
           <a href="#blog">BLOG</a>
+        </li>
+        <li>
           <a href="#contact">CONTACT</a>
+        </li>
           </li>
         </ul>
       </nav>
@@ -185,7 +196,7 @@
                 <div class="badge5"></div>
 
             </div>
-          </div>
+  </div>
   <!-- </div> -->
 
 
