--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <input class="input-username-and-password" type="email" name="email" id="email" placeholder="Your Email"></br>
                         <!-- <label for="input" id="input">What can I do for you ?</label></br> -->
                         <textarea name="comment" form="usrform" placeholder="What can I do for you?"></textarea></br>
-                        <input type="submit" value="Say Hi">           
+                        <input type="submit" value="Say Hi 🙂">           
                   </form>
                 </div>
             </div>
