linking page done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
   <div class="container1">
+    <div id="header"></div>
     <div class ="header">
     <header>
       <h1><a href="#header">THAD WILLIAM HOSKIN</a></h1>
@@ -36,6 +37,7 @@
   <!-- contact page -->
 
   <div class="container3">
+    <div id="contact"></div>
           <div class="coffee">
             <div class="coffee-child">
               <h1>LETS GET COFFEE</h1>
@@ -78,6 +80,7 @@
   <!-- about page -->
 
 <div class="container2">
+  <div id="about"></div>
     <div class ="header">
     <header>
       <h1><a href="#header">THAD WILLIAM HOSKIN</a></h1>
@@ -122,6 +125,7 @@
 
           <p id="last-p-spacing">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque aperiam dicta ea. Molestiae laborum soluta et tempora voluptatum labore quam doloremque dignissimos eligendi. Optio, alias!</p>
         </section-2>
+    
     </div>
       <!-- footer  -->
 
@@ -144,6 +148,7 @@
 <!-- blog page -->
 
 <div class="container1">
+  <div id="blog"></div>
     <div class ="header">
     <header>
       <h1><a href="#header">THAD WILLIAM HOSKIN</a></h1>
