--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <nav>
       <ul>
         <li>
-          <a href="#about">ABOUT</a>
+          <a href="./about.html#about">ABOUT</a>
         </li>
         <li>
-          <a href="#blog">BLOG</a>
+          <a href="./blog.html#blog">BLOG</a>
         </li>
         <li>
           <a href="#contact">CONTACT</a>
@@ -77,7 +77,7 @@
           </div>
   
 
-  <!-- about page -->
+  <!-- about page
 
 <div class="container2">
   <div id="about"></div>
@@ -130,7 +130,7 @@
 
 
 
-      <!-- footer  -->
+      footer
 
 
           <div class="footer-container">
@@ -145,11 +145,11 @@
               <div class="badge5"></div>
 
             </div>
-          </div>
+          </div> -->
 
-<!-- blog page -->
+      <!-- blog page -->
 
-<div class="container1">
+<!-- <div class="container1">
   <div id="blog"></div>
     <div class ="header">
     <header>
@@ -175,7 +175,7 @@
     <div class="blog-main-content">
       <section-1>
           <h3 id="blog-title">BLOG</h3>
-            <h3><a href="#blog-post1">BLOG POST 1</a></h3>          
+            <h3><a href="./blog-post-1.html">BLOG POST 1</a></h3>          
             <p>Currently I am in the process of completing a Coding bootcamp at <a href="https://coderacademy.edu.au/">Coder Academy</a> and thoroughly enjoying it. Meeting some very cool, like-minded people, and learning the art of coding and web design ! Finishing up in August !</p>
       </section-1>
       <section-2>
@@ -190,6 +190,8 @@
           <h3><a href="#blog-post4">BLOG POST 4</a></h3>
           <p id="last-blog-spacing">At the moment , i have recently started running again, trying to get back to some good pace. Am just starting out slow and making sure i don't reaggravate an old achilles injury , 🤞 its stays that way.  </p>
       </section-2>
+    
+    
     </div>
           <div class="footer-container">
             <div class="footer-header">
@@ -204,7 +206,7 @@
             </div>
           </div>
   </div>
-
+ -->
 
 
 
