linking blog pages and navs

--- a/blog-post-4.html
+++ b/blog-post-4.html
@@ -35,7 +35,7 @@
             <div class="blog-post-1">
               <div class="blog-post-container">
                 <div class="blog-one-content">
-                  <h3>THIS IS MY FIRST BLOG POST</h3>
+                  <h3>THIS IS MY FOURTH POST</h3>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, asperiores? Alias dicta eligendi quos vel ea, et quidem, rerum repellendus quam molestias sunt non quae eaque voluptate ducimus assumenda sint harum nulla possimus ipsam est! Numquam atque magnam iste distinctio quibusdam et, molestias vitae? Eius eveniet neque, dolore corrupti accusamus eaque voluptatum! Accusantium a ipsa corporis magnam voluptatibus sequi totam earum hic voluptatem, saepe illo dolores quod. Illum, qui amet consequuntur, totam eum consectetur ex obcaecati unde esse quis dolore, modi labore ullam fugiat quasi maiores reprehenderit! Enim esse, sint, deserunt obcaecati consequuntur inventore odio at ipsa sit eligendi cumque!
 
@@ -46,7 +46,3 @@
             
             </div>
 </div>
-
-
-
-
