--- a/blog.html
+++ b/blog.html
@@ -60,11 +60,11 @@
               <h2>WHERE TO FIND ME</h2>
             </div>
             <div class="icons">
-                <div class="badge1"></div>
-                <div class="badge2"></div>
-                <div class="badge3"></div>
-                <div class="badge4"></div>
-                <div class="badge5"></div>
+                <div class="badge1 badge-margin"></div>
+                <div class="badge2 badge-margin"></div>
+                <div class="badge3 badge-margin"></div>
+                <div class="badge4 badge-margin"></div>
+                <div class="badge5 badge-margin"></div>
             </div>
           </div>
   </div>
