photo added to blog

--- a/blog.html
+++ b/blog.html
@@ -52,6 +52,9 @@
 
           <h3><a href="./blog-post-4.html">BLOG POST 4</a></h3>
           <p id="last-blog-spacing">At the moment , i have recently started running again, trying to get back to some good pace. Am just starting out slow and making sure i don't reaggravate an old achilles injury , 🤞 its stays that way.  </p>
+
+          <h3><a href="./blog-post-5.html">BLOG POST 5</a></h3>
+          <p id="last-blog-spacing">Look at my bike</p>
       
       </section-2>
     
