--- a/blog-post-5.html
+++ b/blog-post-5.html
@@ -35,20 +35,20 @@
             <div class="blog-post-1">
               <div class="blog-post-container">
                 <div class="blog-one-content">
-                  <h3>THIS IS MY FIRST BLOG POST</h3>
+                  <h3>THIS IS MY FIFTH BLOG POST</h3>
                     <p id="date">01 April 2020</p>
-                    <p>
+                      <p>
+                        <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, asperiores? Alias dicta eligendi quos vel ea, et quidem, rerum repellendus quam molestias sunt non quae eaque voluptate ducimus assumenda sint harum nulla possimus ipsam est! Numquam atque magnam iste distinctio quibusdam et, molestias vitae? Eius eveniet neque, dolore corrupti accusamus eaque voluptatum! Accusantium a ipsa corporis magnam voluptatibus sequi totam earum hic voluptatem, saepe illo dolores quod. Illum, qui amet consequuntur, totam eum consectetur ex obcaecati unde esse quis dolore, modi labore ullam fugiat quasi maiores reprehenderit! Enim esse, sint, deserunt obcaecati consequuntur inventore odio at ipsa sit eligendi cumque!
 
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur eos doloremque cupiditate accusantium commodi officiis fuga, repellat culpa qui corrupti vero temporibus quaerat laudantium eius inventore repudiandae, illo est quia nisi, modi alias velit aperiam deleniti repellendus? Rem error hic, quaerat cupiditate nemo praesentium harum id dolore velit fuga placeat quas atque mollitia architecto 
-                    </p>
-                    <div class="blog-photo"></div>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur eos doloremque cupiditate accusantium commodi officiis fuga, repellat culpa qui corrupti vero temporibus quaerat laudantium eius inventore repudiandae, illo est quia nisi, modi alias velit aperiam deleniti repellendus? Rem error hic, quaerat cupiditate nemo praesentium harum id dolore velit fuga placeat quas atque mollitia architecto exercitationem voluptas inventore totam, deleniti, sed ex consequuntur at. Provident, perferendis autem corrupti nam omnis animi? Quis illo praesentium ea cum ut. Deleniti repellendus dolorem iste voluptatibus explicabo sed, magnam facilis soluta dolore esse labore? Ipsa doloribus numquam saepe, quod nemo natus delectus iure porro nihil?
+                    
+                      </p>
+                        <div class="blog-photo">
+                          <img src="bike.jpeg" alt="my bike" height="300" width="300">
+                        </div>
                 </div>
               </div>
             
             </div>
 </div>
-
-
-
-
