closing in for the night

--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
             <h3 id="h3-font-weight">WHAT I'M UPTO</h5>          
             <p>Currently I am in the process of completing a Coding bootcamp at <a href="https://coderacademy.edu.au/">Coder Academy</a> and thoroughly enjoying it. Meeting some very cool, like-minded people, and learning the art of coding and web design ! Finishing up in August !</p>
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, nesciunt dolores, doloremque aspernatur expedita tempora quibusdam id magni delectus rem odit ducimus laudantium consectetur distinctio?</p>
+            <p>I have been working with HTML5 and CSS , making static websites, look forward to working with new clients building them the best site we can design together for them. I have experience in Ruby, and Ruby on Rails. I look forward to hearing form you, to make the best site we can together. Please feel free to check out my CV here <a href="resume.pdf" alt=""></a> </p>
             
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis culpa magnam molestias. Cum beatae, recusandae maiores voluptas porro, fugiat quaerat voluptate placeat rerum nesciunt nam?</p>
+            <p>Prior to joining Coder Academy i was working in construction as a concrete finisher, so i know the meaning of a hard days work! Even before that i was living London fr 2 years. At university i completed a dipGrad in Music Performance, hoping i can also transfer my creative side to helping you design a killer website.</p>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum consequuntur asperiores fugit enim ad voluptatibus eaque accusamus incidunt exercitationem cupiditate in saepe, odio numquam dicta!</p>
         </section-1>
@@ -49,7 +49,7 @@
           <h3 id="h3-font-weight">WHAT I LIKE TO DO</h3>
           <p>At the moment , i have recently started running again, trying to get back to some good pace. Am just starting out slow and making sure i don't reaggravate an old achilles injury , 🤞 its stays that way.  </p>
 
-          <p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque aperiam dicta ea. Molestiae laborum soluta et tempora voluptatum labore quam doloremque dignissimos eligendi. Optio, alias!</p></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque aperiam dicta ea. Molestiae laborum soluta et tempora voluptatum labore quam doloremque dignissimos eligendi. Optio, alias!</p>
 
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque aperiam dicta ea. Molestiae laborum soluta et tempora voluptatum labore quam doloremque dignissimos eligendi. Optio, alias!</p>
 
