--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -42,7 +42,9 @@
 
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur eos doloremque cupiditate accusantium commodi officiis fuga, repellat culpa qui corrupti vero temporibus quaerat laudantium eius inventore repudiandae, illo est quia nisi, modi alias velit aperiam deleniti repellendus? Rem error hic, quaerat cupiditate nemo praesentium harum id dolore velit fuga placeat quas atque mollitia architecto 
                     </p>
-                    <div class="blog-photo"></div>
+                    <div class="blog-photo">
+                      <img src="bike.jpeg" alt="my bike" height="300" width="300">
+                    </div>
                 </div>
               </div>
             
