--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
       <section-1>
           <h3 id="blog-title">BLOG</h3>
             <h3><a href="./blog-post-1.html">BLOG POST 1</a></h3>          
-            <p>Currently I am in the process of completing a Coding bootcamp at <a href="https://coderacademy.edu.au/">Coder Academy</a> and thoroughly enjoying it. Meeting some very cool, like-minded people, and learning the art of coding and web design ! Finishing up in August !</p>
+            <p>Currently I am in the process of completing a Coding bootcamp at Coder Academy</a> and thoroughly enjoying it. Meeting some very cool, like-minded people, and learning the art of coding and web design ! Finishing up in August !</p>
       </section-1>
       
       <section-2>
