--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+<div class="main-pic">
   <div class="container1">
     <div id="header"></div>
     <div class ="header">
@@ -33,7 +34,7 @@
       </nav>
     </div>
   </div>
-
+</div>
 
 
   <!-- contact page -->
