--- a/blog-post-3.html
+++ b/blog-post-3.html
@@ -43,6 +43,9 @@
 
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur eos doloremque cupiditate accusantium commodi officiis fuga, repellat culpa qui corrupti vero temporibus quaerat laudantium eius inventore repudiandae, illo est quia nisi, modi alias velit aperiam deleniti repellendus? Rem error hic, quaerat cupiditate nemo praesentium harum id dolore velit fuga placeat quas atque mollitia architecto exercitationem voluptas inventore totam, deleniti, sed ex consequuntur at. Provident, perferendis autem corrupti nam omnis animi? Quis illo praesentium ea cum ut. Deleniti repellendus dolorem iste voluptatibus explicabo sed, magnam facilis soluta dolore esse labore? Ipsa doloribus numquam saepe, quod nemo natus delectus iure porro nihil?
                     </p>
+                    <div class="blog-photo">
+                      <img src="bike.jpeg" alt="my bike" height="300" width="300">
+                    </div>
                 </div>
               </div>
             
