color / font weight changes

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="icons">
                   <div class="badge1">
-                  <!-- <a href="https://github.com/"></a>  make this clickable?--> 
+                  <!-- <a href="https://https://github.com/ThadHoskin/portfolio-website/"></a>  make this clickable?--> 
                   </div>
                   <div class="badge2"></div>
                   <div class="badge3"></div>
