--- a/blog.html
+++ b/blog.html
@@ -36,13 +36,13 @@
     </div>
     
       <section-1>
-          <h3 id="blog-title">BLOG</h3>
+          <h3 id="blog-header">BLOG</h3>
             <h3><a href="./blog-post-1.html">BLOG POST 1</a></h3>          
             <p>Currently I am in the process of completing a Coding bootcamp at Coder Academy</a> and thoroughly enjoying it. Meeting some very cool, like-minded people, and learning the art of coding and web design ! Finishing up in August !</p>
       </section-1>
       
       <section-2>
-          <h3><a href="./blog-post-2.html">BLOG POST 2</a></h3>
+          <h3 id ="blog-title"><a href="./blog-post-2.html">BLOG POST 2</a></h3>
           <p>At the moment , i have recently started running again, trying to get back to some good pace. Am just starting out slow and making sure i don't reaggravate an old achilles injury , 🤞 its stays that way.  </p>
 
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque aperiam dicta ea. Molestiae laborum soluta et tempora voluptatum labore quam doloremque dignissimos eligendi. Optio, alias!</p>
@@ -65,7 +65,7 @@
               <h2>WHERE TO FIND ME</h2>
             </div>
             <div class="icons">
-                <div class="badge1"></div>
+                <a class="badge1" href="https://github.com/ThadHoskin/portfolio-website"></a> 
                 <div class="badge2"></div>
                 <div class="badge3"></div>
                 <div class="badge4"></div>
