--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
       <h1><a href="#header">THAD WILLIAM HOSKIN</a></h1>
     </header>
   </div>
+  <!-- nav bar -->
   <div class ="navbar">
     <nav>
       <ul>
         <li>
-          <a href="./about.html#about">ABOUT</a>
+          <!-- <--about link nav bar --> 
+          <a href="./about.html#about">ABOUT</a>  
         </li>
         <li>
-          <a href="./blog.html#blog">BLOG</a>
+          <!-- blog link nav bar -->
+          <a href="./blog.html#blog">BLOG</a>   
         </li>
         <li>
+          <!-- <--contact link nav bar --> 
           <a href="#contact">CONTACT</a>
         </li>
           </li>
@@ -40,7 +44,9 @@
   <!-- contact page -->
 
   <div class="container3">
+    <!-- linking to contact page -->
     <div id="contact"></div>
+          <!-- flex box for contact page -->
           <div class="coffee">
             <div class="coffee-child">
               <h1>LETS GET COFFEE</h1>
@@ -49,8 +55,10 @@
             </div>
             </div>  
             <div class="form">
+              <!-- form div  -->
                 <div class="form-child">
-                  <form>
+                  <!-- form -->
+                  <form action ="https://formspree.io/xzbabzjk" method ="POST">
                         <input name="name" id="name" placeholder="Your Name"></br>
                         <input class="input-username-and-password" type="email" name="email" id="email" placeholder="Your Email"></br>
                         <textarea name="comment" form="usrform" placeholder="What can I do for you?"></textarea></br>
@@ -60,15 +68,13 @@
             </div>
   </div>
           
-          
+          <!-- footer container -->
           <div class="footer-container">
                 <div class="footer-header">
                   <h2>WHERE TO FIND ME</h2>
                 </div>
                 <div class="icons">
-                  <div class="badge1">
-                  <!-- <a href="https://https://github.com/ThadHoskin/portfolio-website/"></a>  make this clickable?--> 
-                  </div>
+                  <a class="badge1" href="https://github.com/ThadHoskin/portfolio-website"></a> 
                   <div class="badge2"></div>
                   <div class="badge3"></div>
                   <div class="badge4"></div>
