deleted useless css files

--- a/about.html
+++ b/about.html
@@ -67,7 +67,9 @@
       <!-- footer  -->
 
 
-          <div class="footer-container">
+  </div>
+</div>
+<div class="footer-container">
             <div class="footer-header">
               <h2>WHERE TO FIND ME</h2>
             </div>
@@ -80,5 +82,5 @@
 
             </div>
           </div>
-  </div>
-</div>
+          
+</html>
