--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             <h3 id="h3-font-weight">WHAT I'M UPTO</h3>          
             <p>Currently I am in the process of completing a Coding bootcamp at <a href="https://coderacademy.edu.au/">Coder Academy</a> and thoroughly enjoying it. Meeting some very cool, like-minded people, and learning the art of coding and web design ! Finishing up in August !</p>
 
-            <p>I have been working with HTML5 and CSS , making static websites, look forward to working with new clients building them the best site we can design together for them. I have experience in Ruby, and Ruby on Rails. I look forward to hearing form you, to make the best site we can together. Please feel free to check out <a href="resume.pdf">my CV.</a></p>
+            <p>I have been working with HTML5 and CSS , making static websites, look forward to working with new clients building them the best site we can design together for them. I have experience in Ruby, and Ruby on Rails. I look forward to hearing form you, to make the best site we can together. Please feel free to check out <a href="Thad-Hoskin.pdf">my CV.</a></p>
             
             <p>Prior to joining Coder Academy i was working in construction as a concrete finisher, so i know the meaning of a hard days work! Even before that i was living London fr 2 years. At university i completed a dipGrad in Music Performance, hoping i can also transfer my creative side to helping you design a killer website.</p>
 
@@ -82,5 +82,5 @@
 
             </div>
           </div>
-          
+
 </html>
