--- a/blog-post-3.html
+++ b/blog-post-3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🙎‍♂️ Thad Hoskin</title>
-  <link rel="stylesheet" href=style.css />
+  <link integrity="JDv59U6G+IqT/ms/erGIcmIgK6Gz/N3dkaFwIcTOErL8tKS5+qdxTwbC6YtQ5jhB" rel="stylesheet" href=style.css />
 </head>
 
 
